# SYNAPSE

./: .gitignore  Makefile  PKGBUILD  README.md  action_engine.c  build-all.sh  build.sh  builtins.c  classify.c  color.h  inference.c  ipc.c  main.c  meson.build  readline_synsh.h  synapd.h  synapse_ctx.c  synapse_kmod.h  synapse_sysfs.h  synsh.h
.claude/: settings.local.json
archiso/: README.md  build.sh  packages.x86_64  pacman.conf  profiledef.sh
archiso/.claude/: settings.local.json
archiso/airootfs/: customize_airootfs.sh
archiso/airootfs/etc/: customize_airootfs.sh  pacman.conf  shadow  vconsole.conf
archiso/airootfs/local-repo/: syn-0.1.0-1-any.pkg.tar.zst  syn-firstboot-0.1.0-1-any.pkg.tar.zst  syn-install-0.1.0-1-any.pkg.tar.zst  synapd-debug-0.1.0-1-x86_64.pkg.tar.zst  synapseos.db.tar.gz.old  synapseos.files.tar.gz.old  synnet-0.1.0-1-x86_64.pkg.tar.zst  synnet-debug-0.1.0-1-x86_64.pkg.tar.zst  synsh-0.1.0-1-x86_64.pkg.tar.zst  synui-0.1.0-1-x86_64.pkg.tar.zst  synui-0.1.0-2-x86_64.pkg.tar.zst
archiso/airootfs/root/: .bash_profile  customize_airootfs.sh
archiso/build_scripts/: qemu-test.sh
archiso/grub/: grub.cfg
archiso/local-repo/: syn-0.1.0-1-any.pkg.tar.zst  syn-firstboot-0.1.0-1-any.pkg.tar.zst  syn-install-0.1.0-1-any.pkg.tar.zst  syn-install-0.1.0-2-any.pkg.tar.zst  syn-install-0.1.0-4-any.pkg.tar.zst  synapd-0.1.0-1-x86_64.pkg.tar.zst  synapse_kmod-0.1.0-1-x86_64.pkg.tar.zst  synapseos.db  synapseos.db.tar.gz.old  synapseos.files  synapseos.files.tar.gz.old  synguard-0.1.0-1-x86_64.pkg.tar.zst  synguard-0.1.0-2-x86_64.pkg.tar.zst  synguard-debug-0.1.0-1-x86_64.pkg.tar.zst  synguard-debug-0.1.0-2-x86_64.pkg.tar.zst  synnet-0.1.0-1-x86_64.pkg.tar.zst  synsh-debug-0.1.0-1-x86_64.pkg.tar.zst  synui-0.1.0-1-x86_64.pkg.tar.zst  synui-debug-0.1.0-2-x86_64.pkg.tar.zst
archiso/work/: build_date  iso.pacman.conf
llama-staging/usr/lib/: libggml-base.so.0  libggml-base.so.0.9.7  libggml-base.so.0.9.8  libggml-cpu.so.0  libggml-cpu.so.0.9.7  libggml-cpu.so.0.9.8  libggml-cuda.so.0  libggml.so.0  libggml.so.0.9.7  libggml.so.0.9.8  libllama.so.0  libllama.so.0.0.1  libllama.so.0.0.14  libllama.so.0.0.2  libmtmd.so.0  libmtmd.so.0.0.1  (+3 more)
mnt/user-data/outputs/synapseos/synsh/: PKGBUILD  meson.build
mnt/user-data/outputs/synapseos/synsh/src/: main.c
syn/: PKGBUILD  syn-0.1.0-1-any.pkg.tar.zst  syn.sh
syn-firstboot/: PKGBUILD  syn-firstboot-0.1.0-1-any.pkg.tar.zst  syn-firstboot.sh
syn-firstboot/src/: syn-firstboot.sh
syn-install/: PKGBUILD  syn-install-0.1.0-1-any.pkg.tar.zst  syn-install-0.1.0-3-any.pkg.tar.zst  syn-install.sh
syn-install/src/: syn-install.sh
syn-model/: PKGBUILD  syn-model-0.1.0-1-any.pkg.tar.zst  syn-model.sh
syn-model/src/: syn-model.sh
syn/src/: syn.sh
synapd/: PKGBUILD  meson.build  synapd-debug-0.1.0-1-x86_64.pkg.tar.zst
synapd/config/: synapd.conf
synapd/include/: scheduler.h  socket_server.h  synapd.h
synapd/pkg/synapd/: .BUILDINFO  .MTREE  .PKGINFO
synapd/pkg/synapd-debug/: .BUILDINFO  .MTREE  .PKGINFO
synapd/pkg/synapd-debug/usr/src/debug/synapd/synapd-0.1.0/include/: inference.h  scheduler.h
synapd/pkg/synapd-debug/usr/src/debug/synapd/synapd-0.1.0/src/: main.c  scheduler.c
synapd/src/: inference.c  scheduler.c  socket_server.c
synapd/src/synapd-0.1.0/: meson.build
synapd/src/synapd-0.1.0/include/: context.h  log.h
synapd/src/synapd-0.1.0/src/: context.c  log.c
synapd/systemd/: synapd.service
synapse_kmod/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .synapse_kmod.ko.cmd  .synapse_kmod.mod.cmd  .synapse_kmod.mod.o.cmd  .synapse_kmod.o.cmd  Makefile  PKGBUILD  README.md  dkms.conf  modules.order  synapse_kmod-debug-0.1.0-1-x86_64.pkg.tar.zst  synapse_kmod.install  synapse_kmod.mod  synapse_kmod.mod.c
synapse_kmod/hooks/: 71-synapse-kmod.hook  synapse-kmod-rebuild
synapse_kmod/include/: synapse_probe.h  synapse_sched.h
synapse_kmod/src/: .synapse_ctx.o.cmd  .synapse_main.o.cmd  .synapse_probe.o.cmd  .synapse_sched.o.cmd  .synapse_sysfs.o.cmd  synapse_main.c  synapse_probe.c  synapse_sched.c  synapse_sysfs.c
synapse_kmod/tools/: syn-kmod-status.c
synguard/: PKGBUILD  synguard-0.1.0-1-x86_64.pkg.tar.zst  synguard-debug-0.1.0-1-x86_64.pkg.tar.zst
synguard/include/: synguard.h
synguard/rules/: 10-ai-assist.rules
synguard/src/: core.c  rule_engine.c  synguard_main.c
synguard/src/synguard-0.1.0/src/synguard-0.1.0/src/synguard-0.1.0/: meson.build
synguard/src/synguard-0.1.0/src/synguard-0.1.0/src/synguard-0.1.0/rules/: 00-base.rules
synguard/src/synguard-0.1.0/src/synguard-0.1.0/src/synguard-0.1.0/systemd/: synguard.service
synguard/systemd/: synguard.service
synnet/: PKGBUILD  meson.build  synnet-debug-0.1.0-1-x86_64.pkg.tar.zst
synnet/pkg/synnet/: .BUILDINFO  .MTREE  .PKGINFO
synnet/pkg/synnet-debug/: .BUILDINFO  .MTREE  .PKGINFO
synnet/pkg/synnet-debug/usr/src/debug/synnet/synnet-0.1.0/src/: monitor.c
synnet/src/: monitor.c
synnet/src/synnet-0.1.0/: synnet.service
synnet/src/synnet-0.1.0/src/synnet-0.1.0/include/: synnet.h
synnet/src/synnet-0.1.0/src/synnet-0.1.0/src/: main.c
synnet/systemd/: synnet.service
synsh/: PKGBUILD  synsh-0.1.0-1-x86_64.pkg.tar.zst  synsh-debug-0.1.0-1-x86_64.pkg.tar.zst
synsh/config/: synshrc
synsh/include/: classify.h  synsh.h
synsh/src/: builtins.c  classify.c  exec.c  executor.c  init.c  ipc.c  readline_synsh.c
synsh/src/synsh-0.1.0/: meson.build
synsh/src/synsh-0.1.0/include/: builtins.h  ipc.h  synsh.h
synsh/src/synsh-0.1.0/src/: ai.c  exec.c  init.c  main.c  readline_synsh.c
synui/: PKGBUILD  meson.build  synui-0.1.0-1-x86_64.pkg.tar.zst  synui-debug-0.1.0-1-x86_64.pkg.tar.zst
synui/config/: synui.desktop  synuirc
synui/include/: synui.h
synui/src/: ai_interface.c  input.c  layout.c  server.c  synui.h  synui_main.c
synui/src/synui-0.1.0/: meson.build
synui/src/synui-0.1.0/include/: synui.h
synui/src/synui-0.1.0/src/: ai_interface.c  main.c  synui_main.c
synui/src/synui-0.1.0/systemd/: synui-foot.service  synui.service
synui/systemd/: synui-foot.service  synui.service
(+97 files in other folders)
